--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,11 @@
             "Smatpay\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "KTest\\": "tests/"
+        }
+    },
     "require-dev": {
         "phpunit/phpunit": "*",
         "symfony/var-dumper": "*"
