--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "smatechgroup/smatpay",
+    "name": "smatpay/smatpay-php-sdk",
     "description": "Provides a payment gateway for Zimbabwean Payment Providers",
     "license": "MIT",
     "type": "library",
