--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
         "ext-json": "*",
         "ext-curl": "*"
     },
+    "config": {
+        "platform": {
+            "php": "7.4"
+        }
+    },
     "autoload": {
         "psr-4": {
             "Smatpay\\": "src/"
